--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "dayjs": "^1.11.10",
+    "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "dayjs-plugin-utc": "^0.1.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.4",
-    "styled-components": "^6.1.8"
+    "recharts": "^2.13.0-alpha.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,8 +28,8 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.4"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
